IOUtils cleanup and bz2 compression